# ontology-skill

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Justfile  pyproject.toml
.claude/: settings.json
.claude/hooks/: guard-sed-ontology.sh  post-ontology-write.sh  protect-ontology-files.sh
.claude/rules/: ontology-build-scripts.md  ontology-safety.md  ontology-testing.md
.claude/skills/: CONVENTIONS.md  SKILL-TEMPLATE.md
.claude/skills/_shared/: bfo-categories.md  bfo-decision-recipes.md  closure-and-open-world.md  cq-traceability.md  github-actions-template.md  iteration-loopbacks.md  llm-verification-patterns.md  mapping-evaluation.md  modularization-and-bridges.md  naming-conventions.md  odk-and-imports.md  owl-profile-playbook.md  pattern-catalog.md  provenance-and-publication.md  relation-semantics.md  robot-template-preflight.md  shacl-patterns.md  sssom-semapv-recipes.md  tool-decision-tree.md
.claude/skills/ontology-architect/: SKILL.md
.claude/skills/ontology-conceptualizer/: SKILL.md
.claude/skills/ontology-curator/: SKILL.md
.claude/skills/ontology-mapper/: SKILL.md
.claude/skills/ontology-requirements/: SKILL.md
.claude/skills/ontology-scout/: SKILL.md
.claude/skills/ontology-validator/: SKILL.md
.claude/skills/sparql-expert/: SKILL.md
.github/workflows/: skygest-energy-vocab-manifest.yml
docs/: HANDOFF-2026-04-22-fresh-ontology.md  HANDOFF-2026-05-04-editorial-extension.md  bfo_extraction.md  change-proposal.md  kendall_mcguinness_extraction.md  knowledge_graphs_extraction.md  ontology_research.md  practitioner-insights.md  proposal.md
docs/energy-news/: anti-pattern-review.md  axiom-plan.yaml  bfo-alignment.md  competency-questions.yaml  conceptual-model.yaml  glossary.csv  orsd.md  pre-glossary.csv  property-design.yaml  reuse-report.md  scope.md  traceability-matrix.csv  use-cases.yaml  validation-report.md
docs/issues/: 001-rlm-prefill-error.md  002-rlm-backtick-json-parse-error.md
docs/plans/: 2026-02-18-repo-reorganization-design.md  2026-02-18-repo-reorganization.md  2026-02-23-pao-blog-post-design.md  2026-02-23-pao-blog-post.md  2026-04-12-skygest-data-model-design.md
docs/refactor/: CHANGELOG.md  HANDOFF-2026-04-21-wave2-complete.md  HANDOFF-2026-04-21-wave3-complete.md  HANDOFF-2026-04-21-wave3b-complete.md  HANDOFF-2026-04-21.md  HANDOFF-2026-04-22-wave4-complete.md
docs/research/: 2026-04-12-effect-algebra-mapping.md  2026-04-12-effect-type-generation-pipeline.md  2026-04-12-resolution-algebra.md  2026-04-12-resolution-trace-examples.md  2026-04-12-scoring-segmentation-feedback.md  2026-04-12-text-ops-and-evidence-combination.md  2026-04-21-workflow-improvement-context.md  2026-04-21-workflow-improvement-prompt.md  2026-04-21-workflow-improvement-report.md  deep-research-report.md
ontologies/: profile.txt
ontologies/energy-intel/: catalog-v001.xml  energy-intel-changes-v1.kgcl  energy-intel.ttl  imports-manifest-INDEX.yaml  imports-manifest-v1.yaml  imports-manifest-v2.yaml  imports-manifest.yaml
ontologies/energy-intel/docs/: anti-pattern-review-v1.md  anti-pattern-review-v2.md  anti-pattern-review.md  architect-build-log-v1.md  architect-build-log-v2.md  architect-build-log.md  architect-to-validator-handoff-v1.md  architect-to-validator-handoff-v2.md  architect-to-validator-handoff.md  axiom-plan-v1.md  axiom-plan-v2.md  axiom-plan.md  bfo-alignment-v1.md  bfo-alignment-v2.md  bfo-alignment.md  competency-questions-v1.yaml  competency-questions-v2.yaml  competency-questions.yaml  conceptual-model-v1.md  conceptual-model-v2.md  conceptual-model.md  conceptualizer-to-architect-handoff-v1.md  conceptualizer-to-architect-handoff-v2.md  conceptualizer-to-architect-handoff.md  cq-quality-v1.csv  cq-quality-v2.csv  cq-quality.csv  curator-log-v1.md  curator-log-v2.md  narrative-identity-rule.md  odp-recommendations.md  oeo-import-rebuild-plan.md  pre-glossary-v1.csv  pre-glossary-v2.csv  pre-glossary.csv  property-design-v1.md  property-design-v2.md  property-design.md  requirements-approval-v1.yaml  requirements-approval-v2.yaml  (+25 more)
ontologies/energy-intel/imports/: bfo-terms-to-remove.txt  oeo-seed-verification.md  oeo-topic-seeds.txt  oeo-topic-subset.ttl  upper-axiom-leak-terms.txt  v2-extra-leak-terms.txt
ontologies/energy-intel/modules/: agent.ttl  data.ttl  editorial.ttl  measurement.ttl  media.ttl
ontologies/energy-intel/release/: editorial-v0-changes.kgcl  release-audit.yaml  (+6 more)
ontologies/energy-media/: energy-media-chart-types.ttl  energy-media-providers.ttl  energy-media.ttl
ontologies/energy-news/: catalog-v001.xml  energy-news-changes.kgcl  energy-news-data.ttl  energy-news-reference-individuals.ttl  energy-news.ttl  robot-report-profile.txt
ontologies/personal_agent_ontology/: CHANGELOG.md  catalog-v001.xml  pao-data.ttl  pao-reference-individuals.ttl  personal_agent_ontology.ttl
ontologies/skygest-energy-vocab/: catalog-v001.xml  skygest-energy-vocab-report.tsv  skygest-energy-vocab.ttl
scripts/: build_energy_news.py  build_research_bundle.py  validate_description_routing.py  validate_sssom.py  validate_turtle.py
skills/: CONVENTIONS.md
skills/_shared/: anti-patterns.md  axiom-patterns.md  bfo-categories.md  methodology-backbone.md  namespaces.json  naming-conventions.md  quality-checklist.md  tool-decision-tree.md
skills/ontology-architect/: SKILL.md
skills/ontology-conceptualizer/: SKILL.md
skills/ontology-curator/: SKILL.md
skills/ontology-mapper/: SKILL.md
skills/ontology-requirements/: SKILL.md
skills/ontology-scout/: SKILL.md
skills/ontology-validator/: SKILL.md
sparql/: robot-missing-skos-definition.rq
src/ontology_skill/: __init__.py
tests/energy-news/: cq-001.sparql  cq-003.sparql  cq-004.sparql  cq-005.sparql  cq-009.sparql  cq-011.sparql  cq-012.sparql  cq-014.sparql  cq-015.sparql  cq-test-manifest.yaml  neg-001.sparql  neg-002.sparql  prefixes.sparql  tbox-001.sparql  tbox-002.sparql  tbox-003.sparql  verify-missing-definition.sparql  verify-missing-domain-range.sparql  verify-missing-parent.sparql
tests/unit/: test_energy_news_ontology.py  test_smoke.py
(+554 files in other folders)
